# Job-Brain-Bot

./: .env.example  .gitignore  AI_INTELLIGENCE_IMPLEMENTATION.md  DEPLOYMENT_AUDIT_REPORT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_DEPLOYMENT_READINESS.md  README.md  TIME_FILTER_IMPLEMENTATION.md  TROUBLESHOOTING.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
src/job_brain_bot/: __init__.py  config.py  health.py  logging_config.py  main.py  services.py  types.py
src/job_brain_bot/ai_intelligence/: __init__.py  analyzer.py  networking.py  skill_gap.py  skill_ontology_expanded.py
src/job_brain_bot/db/: models.py  repo.py  session.py
src/job_brain_bot/matching/: __init__.py  filters.py  scoring.py  skill_ontology.py
src/job_brain_bot/migrations/: 001_init.sql  002_add_posted_date.sql  003_add_user_job_views.sql  004_expand_user_profile_fields.sql
src/job_brain_bot/networking/: __init__.py  http_client.py
src/job_brain_bot/resume/: __init__.py  parser.py
src/job_brain_bot/scheduler/: jobs.py
src/job_brain_bot/scraping/: __init__.py  collector.py  dynamic_fetch.py  google_search.py  job_page_parser.py  safety.py  time_parser.py
src/job_brain_bot/signals/: __init__.py  hiring_signals.py
src/job_brain_bot/telegram/: __init__.py  bot.py  formatters.py
tests/: test_ai_analyzer.py  test_deduplication.py  test_formatters.py  test_fresher_filtering.py  test_networking.py  test_ranking_logic.py  test_skill_gap.py  test_time_parser.py  test_user_job_views.py
