[tool.poetry]
name = "job-brain-bot"
version = "0.2.0"
description = "Telegram bot for early-career job discovery and matching"
authors = ["Job Brain Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "job_brain_bot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.5"
sqlalchemy = "^2.0.36"
psycopg = { version = "^3.2.3", extras = ["binary"] }
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
playwright = "^1.48.0"
apscheduler = "^3.10.4"
python-dateutil = "^2.9.0.post0"
orjson = "^3.10.10"
structlog = "^24.4.0"
pypdf = "^5.1.0"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-faker = "^20.1.0"

[tool.poetry.scripts]
job-brain-bot = "job_brain_bot.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
